# daytradebot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: default.toml
config/strategies/: pullback-trend-v1.toml
crates/trader-adapters/: Cargo.toml
crates/trader-adapters/src/: lib.rs
crates/trader-adapters/src/ibkr/: broker.rs  config.rs  market_data.rs  mod.rs
crates/trader-adapters/src/simulated/: broker.rs  market_data.rs  mod.rs
crates/trader-backtest/: Cargo.toml
crates/trader-backtest/src/: engine.rs  lib.rs  metrics.rs  report.rs
crates/trader-cli/: Cargo.toml
crates/trader-cli/src/: config.rs  main.rs  synthetic.rs
crates/trader-cli/src/commands/: account.rs  backtest.rs  ingest.rs  journal.rs  mod.rs  paper.rs  status.rs  test_connection.rs
crates/trader-core/: Cargo.toml
crates/trader-core/src/: lib.rs
crates/trader-core/src/context/: mod.rs
crates/trader-core/src/execution/: mod.rs
crates/trader-core/src/indicators/: mod.rs
crates/trader-core/src/risk/: mod.rs
crates/trader-core/src/strategies/: mod.rs
crates/trader-core/src/strategies/pullback_trend_v1/: config.rs  context.rs  entry.rs  mod.rs  setup.rs
crates/trader-domain/: Cargo.toml
crates/trader-domain/src/: context.rs  entities.rs  errors.rs  lib.rs  market.rs  orders.rs  ports.rs  signals.rs  strategy.rs  trades.rs  trading_mode.rs
crates/trader-infra/: Cargo.toml
crates/trader-infra/src/: clock.rs  lib.rs  ports.rs
crates/trader-infra/src/config/: mod.rs
crates/trader-infra/src/db/: mod.rs
crates/trader-infra/src/db/migrations/: 0001_initial_schema.sql
crates/trader-infra/src/logging/: mod.rs
crates/trader-infra/src/repositories/: asset_repository.rs  candle_repository.rs  market_context_repository.rs  mod.rs  order_repository.rs  signal_repository.rs  trade_repository.rs
crates/trader-infra/tests/: candle_repository_test.rs
docs/: ARCHITECTURE.md  DATA-MODEL.md  OPERATIONS.md  PRD.md  SECURITY.md  TECHNICAL-ROADMAP.md  phase-current-status.md  phase1-progress.md  phase2-progress.md  strategy-analysis-framework.md
docs/decisions/: ADR-001-backend-em-rust.md  ADR-002-postgresql-como-datastore.md  ADR-003-interactive-brokers-inicial.md  ADR-004-workspace-multi-crates.md  ADR-005-estrategias-como-plugins.md  ADR-006-event-sourcing-para-decisoes.md  ADR-007-ibkr-tws-api.md  ADR-008-paper-trading-replay-candles-banco.md
docs/strategies/: pullback-trend-v1.md
