[package]
name = "trader-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "trader-cli"
path = "src/main.rs"

[dependencies]
trader-domain = { path = "../trader-domain" }
trader-infra = { path = "../trader-infra" }
trader-adapters = { path = "../trader-adapters" }

chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
